<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.coursework.Activity.HelpActivity"
    android:background="@drawable/cleaback">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/general"
                android:id="@+id/textView"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                android:paddingBottom="10dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="3 ≤ x ≤ 8"
                android:id="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="false"
                android:textColor="#FFFFFF"
                android:textSize="40dp"
                android:layout_below="@+id/textView"
                android:paddingBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:paddingBottom="10dp"
                android:id="@+id/liner1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:src="@drawable/expression1"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/right"
                        android:id="@+id/textView4"
                        android:layout_gravity="center_horizontal"
                        android:textSize="40dp"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3"
                        android:src="@drawable/expression2"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/wrong"
                        android:id="@+id/textView5"
                        android:layout_gravity="center_horizontal"
                        android:textSize="40dp"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/instr1"
            android:id="@+id/textView6"
            android:layout_below="@+id/liner1"
            android:paddingBottom="10dp"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:layout_centerInParent="true"
            android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/survival"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView6"
                android:paddingBottom="10dp"
                android:textColor="#FFFFFF"
                android:textSize="60dp"
                android:layout_centerInParent="true"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_survival"
                android:id="@+id/textView8"
                android:layout_below="@+id/textView7"
                android:paddingBottom="10dp"
                android:textColor="#FFFFFF"
                android:textSize="40dp"
                android:layout_centerInParent="true"
                android:gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/three_live"
                android:id="@+id/textView9"
                android:layout_below="@+id/textView8"
                android:paddingBottom="10dp"
                android:textColor="#FFFFFF"
                android:textSize="60dp"
                android:layout_centerInParent="true"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_3lives"
                android:id="@+id/textView10"
                android:layout_below="@+id/textView9"
                android:paddingBottom="10dp"
                android:textColor="#FFFFFF"
                android:textSize="40dp"
                android:layout_centerInParent="true"
                android:gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/timelimit"
                android:id="@+id/textView11"
                android:layout_below="@+id/textView10"
                android:paddingBottom="10dp"
                android:textColor="#FFFFFF"
                android:textSize="60dp"
                android:layout_centerInParent="true"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_timelimit"
                android:id="@+id/textView12"
                android:layout_below="@+id/textView11"
                android:paddingBottom="10dp"
                android:textColor="#FFFFFF"
                android:textSize="40dp"
                android:layout_centerInParent="true"
                android:gravity="center" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
