<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/cleaback"
    android:clickable="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/name"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="30dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/survival"
                    android:id="@+id/surv_button"
                    android:background="@drawable/mod"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:onClick="onSurvClick"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/survRecord_textView"
                    android:background="@drawable/record"
                    android:layout_weight="3"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="30dp" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/classic"
                    android:id="@+id/button2"
                    android:background="@drawable/mod"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF"
                    android:onClick="onClassClick" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/classRecord_textView"
                    android:background="@drawable/record"
                    android:layout_weight="3"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="30dp" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/timelimit"
                    android:id="@+id/button3"
                    android:background="@drawable/mod"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF"
                    android:onClick="onRaceClick" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/raceRecord_textView"
                    android:background="@drawable/record"
                    android:layout_weight="3"
                    android:textColor="#FFFFFF"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:text="253"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sound_button"
                android:background="@drawable/sound_on"
                android:layout_weight="1"
                android:onClick="onSoundClick" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton2"
                android:background="@drawable/sound_on"
                android:layout_weight="1"
                android:visibility="invisible" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:background="@drawable/sound_on"
                android:layout_weight="1"
                android:visibility="invisible" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/help_button"
                android:background="@drawable/help"
                android:layout_weight="1"
                android:onClick="onHelpClick"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
